--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Assignment Solution For Module 2</title>
-</head>
-<body>
 
+<head>
+    <meta charset="utf-8">
+    <title>Assignment Solution For Module 2</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <h1>Our Menu</h1>
+    <div class="row">
+        <div class="box col-lg-4 col-md-6">
+            <div class="content">
+                <span class="descrip1">Chicken</span>
+                <p>The chicken is a type of domesticated fowl, a subspecies of the red junglefowl. Chickens are one of the most common and widespread domestic animals, with a total population of 23.7 billion as of 2018.</p>
+            </div>
+        </div>
+        <div class="box col-lg-4 col-md-6">
+            <div class="content">
+                <span class="descrip2">Beef</span>
+                <p>Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times. Beef is a source of protein and nutrients</p>
+            </div>
+        </div>
+        <div class="box col-lg-4 col-md-6">
+            <div class="content">
+                <span class="descrip3">Sushi</span>
+                <p>Sushi is a traditional Japanese dish of prepared vinegared rice, usually with some sugar and salt, accompanying a variety of ingredients, such as seafood, often raw, and vegetables.</p>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
